chore(jest): disable custom teardown and use force exit flag instead

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "update": "npx npm-check-updates -u && npm install",
     "lint": "npx eslint src/* --ext .ts --cache --fix",
     "format": "npx prettier --write ./src/**/*.{ts,json}",
-    "test": "npx jest --passWithNoTests --silent --noStackTrace --runInBand --detectOpenHandles",
-    "test:verbose": "npx jest --passWithNoTests --runInBand --detectOpenHandles",
+    "test": "npx jest --passWithNoTests --silent --noStackTrace --runInBand --detectOpenHandles --forceExit",
+    "test:verbose": "npx jest --passWithNoTests --runInBand --detectOpenHandles --forceExit",
     "test:unit": "npm test -- --watch --testPathPattern=\".*/__tests__/.*.spec.ts$\"",
     "test:unit:verbose": "npm run test:verbose -- --watch --testPathPattern=\".*/__tests__/.*.spec.ts$\"",
     "test:integration": "npm test -- --watch --testPathPattern=\".*/__tests__/.*.test.ts$\"",
